--- a/blog.css
+++ b/blog.css
@@ -1,55 +1,367 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,500;1,500&display=swap');
 
-.about {
-    text-align: center;
+:root {
+    --c-brand: #fac562;
+    --c-dark: #333;
+    --c-pink: #FFC0CB;
+    --c-blue: #0000FF;
+    --c-body: #666;
+    --c-light: #f8f8f8;
+    --c-yellow: #ffff00;
+    --f-base: "Plus Jakarta Sans", sans-serif;
+    --n-height: 100px;
+}
+
+*,*::after, *::before {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+html {
+    scroll-behavior: smooth;
+
+}
+
+body {
+    color: var(--c-pink);
+    font-family: var(--f-base);
+    line-height: 1.8;
+    font-weight: 400;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    color: var(--c-yellow);
+    line-height: 1.2;
+    font-weight: 400;
+}
+
+.heading_1 {
+    font-size: clamp(44px, 10vw, 100px);
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.heading-1 {
+    font-size: clamp(32px, 6vw, 54px);
+}
+
+.heading-2 {
+    font-size: clamp(28px, 4vw, 36px);
+}
+
+.heading-3 {
+    font-size: 20px
+}
+
+a {
+    color: var(--c-brand);
+    text-decoration: none;
+    transition: all 0.4s ease-in-out;
+}
+
+a:hover {
+    color: var(--c-brand);
+}
+
+img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+}
+
+
+ul {
+    list-style: none;
+}
+
+.container {
+    max-width: 1140px;
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-bottom: 30px;
+    height: var(--n-height);
+    display: flex;
+    z-index: 999;
+}
+
+.navbar .container {
+    display: flex;
     align-items: center;
-    padding: 10px 0;
+    justify-content: space-between;
+}
+
+.container .logo {
+    padding-top: 30px;
+    max-width: 100px; /* Ensures the image does not exceed its container width */
+    height: auto; /* Maintains the aspect ratio */
+    width: auto;
+}
+
+.brand {
+    color: #fff;
     font-size: 28px;
 }
 
-.about-con {
+.nav-links {
     display: flex;
-    flex-wrap: wrap;
-    padding: 50px;
 }
 
-.content {
-    flex: 1;
-    padding: 20px;
+.nav-links li:not(:last-child) {
+    margin-right: 44px;
 }
 
-.content h3 {
+.nav-links li.active a {
+    box-shadow: 0 2px var(--c-brand);
+}
+
+.nav-links li a {
     color: var(--c-pink);
-    font-size: 20px;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
-.content p {
-    padding: 10px 0;
+.nav-links li a:hover {
+    color: var(--c-body);
+}
+
+
+.btn {
+    display: inline-block;
+    background-color: transparent;
+    border: 1px solid var(--c-body);
+    font-family: var(--f-base);
+    padding: 10px 16px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+    font-size: 14px;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background-color: var(--c-brand);
+    color: #fff;
+}
+
+
+.btn2 {
     color: var(--c-dark);
-    text-align: justify;
+    display: inline-block;
+    background-color: transparent;
+    border: 1px solid var(--c-body);
+    font-family: var(--f-base);
+    padding: 10px 16px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+    font-size: 14px;
+    border-radius: 5px;
 }
 
-.image {
-    flex: 1;
+.btn-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    width: 100%;
 }
 
-.image img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
+.btn2:hover {
+    background-color: var(--c-brand);
+    color: var(--c-light);
+}
+
+
+
+.hamb {
+    display: block;
+    cursor: pointer;
+    display: none;
+}
+
+.hamb span {
+    display: block;
+    width: 34px;
+    height: 2px;
+    background-color: #fff;
+    margin: 8px auto;
+    transition: all 0.4s ease;
+}
+
+.hamb.active span:nth-child(1) {
+    transform: translateY(5px) rotate(45deg);
+}
+
+.hamb.active span:nth-child(2) {
+    transform: translateY(-5px) rotate(-45deg);
+}
+
+.scrolled {
+    background-color: #fff;
+}
+
+.scrolled .brand {
+    color: var(--c-dark);
+}
+
+.scrolled .nav-links li a {
+    color: var(--c-dark);
+}
+
+.scrolled .nav-links li a:hover {
+    color: var(--c-brand);
+}
+
+.scrolled .hamb span {
+    background-color: var(--c-dark);
 }
 
 @media (max-width: 768px) {
-    .about-con {
+    .nav-links {
+        position: fixed;
+        top: var(--n-height);
+        left: 0;
+        width: 100%;
         flex-direction: column;
-        padding: 10px;
+        padding: 0 24px;
+        transition: all 0.3s ease-in-out;
+        height: 0;
+        overflow: hidden;
+        background-color: var(--c-pink);
+        justify-content: center;
     }
 
-    .content, .image {
-        padding: 10px;
-        flex: 100%;
+    @media (max-width: 768px) {
+        .navbar .container {
+            width: 95%; /* Adjust the container width for smaller screens */
+        }
+
+        .container .logo {
+            max-width: 100px;
+        }
+    }
+
+    .nav-links.active {
+        color: var(--c-light);
+        height: 250px;
+    }
+
+    .nav-links li {
+        padding: 10px 0;
+    }
+
+    .nav-links li a {
+        color: #000;
+    }
+
+    .hamb {
+        display: block;
+    }
+}
+    
+
+.detailed-post {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 80px; /* Space from the fixed navbar */
+    margin-bottom: 20px;
+}
+
+.detailed-post .image {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.detailed-post .image img {
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.detailed-post .content {
+    text-align: left;
+}
+
+.detailed-post .content h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    color: var(--c-pink);
+}
+
+.detailed-post .columns {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.detailed-post .column {
+    flex: 1;
+    min-width: 300px;
+    padding: 10px;
+}
+
+.detailed-post .column h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: var(--c-yellow);
+}
+
+.detailed-post .column p {
+    text-align: justify;
+}
+
+.detailed-post .column p, .detailed-post .column ul {
+    margin-bottom: 15px;
+    color: #555;
+    line-height: 1.6;
+}
+
+.detailed-post .column ul {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+
+.detailed-post .column a {
+    color: #007BFF;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.detailed-post .column a:hover {
+    color: #0056b3;
+}
+
+.detailed-post .content a.btn2 {
+    display: inline-block;
+    padding: 10px 20px;
+    background: #007BFF;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
+
+.detailed-post .content a.btn2:hover {
+    background: #0056b3;
+}
+
+
+@media (max-width: 768px) {
+
+    .detailed-post .columns {
+        flex-direction: column;
+    }
+    
+    .detailed-post .column {
+        min-width: 100%;
     }
 }
