--- a/contact.css
+++ b/contact.css
@@ -61,8 +61,8 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 a {
-    color: var(--c-brand);
-    text-decoration: none;
+    color: var(--c-body);
+    text-decoration: underline;
     transition: all 0.4s ease-in-out;
 }
 
