--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ ul {
         transition: all 0.3s ease-in-out;
         height: 0;
         overflow: hidden;
-        background-color: var(--c-pink);
+        background-color: var(--c-light);
         justify-content: center;
     }
 
@@ -287,8 +287,8 @@ ul {
     color: var(--c-yellow);
 }
 
-.hero h1 br {
-    color: var(--c-dark);
+.hero h2 {
+    color: var(--c-pink);
 }
 
 .hero h1 span {
@@ -299,9 +299,10 @@ ul {
 }
 
 .hero .btn2 {
+    margin-top: 50px;
     color: var(--c-light);
     display: inline-block;
-    background-color: transparent;
+    background-color: cadetblue;
     border: 1px solid var(--c-body);
     font-family: var(--f-base);
     padding: 10px 16px;
@@ -324,13 +325,42 @@ ul {
 }
 
 
+/* Keyframes for sliding effect */
+@keyframes slideIn {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+/* Class to apply the sliding effect */
+.slide-in {
+    animation: slideIn 1s ease-out;
+}
+
+
+
 @media (max-width: 768px) {
 
     .hero h1 {
         padding: 10px;
+        font-size: 25px;
+    }
+
+    .hero h2{
+        margin-top: 50px;
+        padding: 20px;
+        color: var(--c-pink);
+        font-size: 18px;
+        text-align: justify;
     }
     .hero .btn2 {
-        padding: 6px 12px;
+        margin-top: 25px;
+        padding: 12px;
         font-size: 12px;
         width: 50%;
     }
