--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     padding: 20px;
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -423,8 +423,8 @@ ul {
 }
 
 .content h3 {
-    color: var(--c-pink);
-    font-size: 20px;
+    color: cadetblue;
+    font-size: 25px;
 }
 
 .content p {
@@ -450,6 +450,10 @@ ul {
     .about {
         font-size: 24px; 
         padding: 5px 0;
+    }
+
+    .about h2 {
+        font-size: 30px;
     }
 
     .about-con {
@@ -493,84 +497,136 @@ ul {
         max-height: none; /* Show full content when expanded */
     }
 }
-/* our blog */
 
-.blog {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
+.benefits-section {
+    padding: 30px;
+    background-color: #fff;
+    width: 90%;
+    margin: auto;
 }
 
-.blog-title {
-    grid-column: 1 / -1;
+.benefits-section h2 {
     text-align: center;
-    font-size: 36px;
     color: var(--c-brand);
-    margin-bottom: 20px;
+    font-size: 35px;
+    margin-bottom: 30px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.blog-post {
+.benefits-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.benefit-item {
+    display: flex;
     align-items: center;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.blog-post .image {
-    width: 100%;
-}
-
-.blog-post .image img {
-    width: 100%;
-    height: 500px;
-}
-
-.blog-post .content {
-    width: 100%;
-    padding: 20px;
-}
-
-.blog-post .content h3 {
-    color: var(--c-pink);
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.blog-post .content p {
-    color: var(--c-dark);
-    text-align: justify;
+    justify-content: space-between;
     margin-bottom: 20px;
+    flex-basis: 48%;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.blog-post .btn {
-    background-color: var(--c-brand);
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
+.benefit-item:hover {
+    transform: scale(1.02);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.benefit-text {
+    flex: 1;
+    padding-right: 20px;
+}
+
+.benefit-text h3 {
+    margin-top: 0;
+    font-size: 20px;
+    color: cadetblue;
+}
+
+.benefit-text p {
+    margin: 10px 0 0;
+    color: #666;
+}
+
+.conclusion {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 30px;
+    color: var(--c-dark);
+    font-style: italic;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-decoration: line-through;
+}
+
+.btn_container {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.btn_container button {
+    color: var(--c-dark);
+    display: inline-block;
+    background-color: transparent;
+    border: 1px solid var(--c-body);
+    font-family: var(--f-base);
+    padding: 10px 16px;
     cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
+    transition: all 0.4s ease-in-out;
+    font-size: 14px;
+    border-radius: 5px;
 }
 
-.blog-post .btn:hover {
-    background-color: darken(var(--c-brand), 10%);
+.btn_container button:hover {
+    background-color: var(--c-brand);
+    color: var(--c-light);
 }
 
-@media (min-width: 768px) {
-    .blog {
-        grid-template-columns: 1fr 1fr;
-        padding: 5px;
+
+
+@media (max-width: 768px) {
+
+    .benefits-section {
+        width: 100%;
+        padding: 20px;
     }
 
-    .blog-post .content {
-        width: 100%;
-        padding: 10px;
+    .benefits-section h2 {
+        font-size: 30px;
+    }
+    .benefits-container {
+        flex-direction: column;
+    }
+
+    .benefit-item {
+        flex-basis: 100%;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .benefit-text {
+        padding-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .benefit-text p {
+        text-align: justify;
+    }
+
+    .benefit-image {
+        margin-bottom: 20px;
+    }
+
+    .conclusion {
+        text-align: justify;
+        font-size: 15px;
     }
 }
 
@@ -578,9 +634,10 @@ ul {
 
 
 /*testimonials*/ 
+
 .section-header {
     text-align: center;
-    margin-bottom: 50px;
+    margin-top: 25px;
 }
 .tes-title {
     font-size: 35px;
@@ -588,8 +645,9 @@ ul {
     color: var(--c-brand);
     line-height: 1.2;
 }
+
 .testimonials {
-    padding: 100px 0;
+    padding: 30px 0;
 }
 
 .tes-content {
@@ -653,6 +711,248 @@ ul {
     height: 12px;
     color: var(--c-dark);
 }
+
+
+
+@media (max-width: 768px) {
+    .tes-title {
+        font-size: 30px;
+    }
+
+    .section-header {
+        margin-top: 10px;
+    }
+
+
+}
+
+
+/*contacts*/
+
+
+.contact-section {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 20px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    margin: 20px 0;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.contact-section h1 {
+    text-align: center;
+}
+
+/* Contact Info Styling */
+.contact-info {
+    flex: 1;
+    margin: 20px;
+    min-width: 300px;
+    max-width: 50%;
+}
+
+.contact-info h3 {
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: cadetblue;
+}
+
+.contact-info p {
+    font-size: 1.1em;
+    margin-bottom: 20px;
+    color: #555;
+}
+
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.contact-info ul li {
+    margin-bottom: 15px;
+    font-size: 1.2em;
+    color: #333;
+    display: flex;
+    align-items: center;
+}
+
+.contact-info ul li i {
+    margin-right: 10px;
+    color: cadetblue;
+}
+
+.contact-info ul li a {
+    color: var(--c-body);
+    text-decoration: none;
+}
+
+.contact-info ul li a:hover {
+    text-decoration: underline;
+}
+
+/* Contact Form Styling */
+.contact-form {
+    flex: 1;
+    padding: 20px;
+    min-width: 300px;
+    max-width: 50%;
+}
+
+.contact-section h1 {
+    width: 100%;
+    font-size: 2.5em;
+    margin-bottom: 30px;
+    color: var(--c-brand);
+}
+
+.contact-form h3 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: cadetblue;
+}
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form input,
+.contact-form textarea {
+    padding: 15px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1em;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.contact-form button {
+    padding: 15px;
+    background-color: cadetblue;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+}
+
+.contact-form button:hover {
+    background-color: var(--c-brand);
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .contact-section {
+        flex-direction: column;
+        margin-top: 30px;
+    }
+
+    .contact-section h1  {
+        justify-content: center;
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .contact-info h3 {
+        font-size: 25px;
+    }
+
+    .contact-form h3 {
+        font-size: 25px;
+    }
+
+    .contact-info,
+    .contact-form {
+        max-width: 100%;
+        text-align: start;
+    }
+}
+
+/* Newsletter Section Styling */
+.newsletter-section {
+    background: linear-gradient(to right, #fac562, #091a36);
+    padding: 50px 20px;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+    margin: 20px 0;
+}
+
+.newsletter-content h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+.newsletter-content p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+.newsletter-form {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.newsletter-form input[type="email"] {
+    padding: 15px;
+    font-size: 1em;
+    border: none;
+    border-radius: 5px 0 0 5px;
+    width: 60%;
+    max-width: 300px;
+    margin-bottom: 10px;
+    outline: none;
+}
+
+.newsletter-form button {
+    padding: 15px;
+    font-size: 1em;
+    background-color: cadetblue;
+    border: none;
+    color: white;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    width: 40%;
+    max-width: 120px;
+    transition: background-color 0.3s ease;
+}
+
+.newsletter-form button:hover {
+    background-color: #e67e22;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+
+    .newsletter-section {
+        padding: 25px 10px;
+    }
+
+    .newsletter-content h2 {
+        font-size: 1.3em;
+    }
+
+    .newsletter-content p {
+        font-size: 1em;
+    }
+    .newsletter-form input[type="email"],
+    .newsletter-form button {
+        width: 100%;
+        border-radius: 5px;
+        margin-bottom: 10px;
+    }
+
+    .newsletter-form button {
+        margin-top: 10px;
+    }
+}
+
+
+
 
 
 
