--- a/contact.css
+++ b/contact.css
@@ -61,7 +61,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 a {
-    color: var(--c-body);
+    color: cadetblue;
     text-decoration: underline;
     transition: all 0.4s ease-in-out;
 }
@@ -84,7 +84,7 @@ ul {
 .btn {
     display: inline-block;
     background-color: transparent;
-    border: 1px solid var(--c-body);
+    border: 1px solid;
     font-family: var(--f-base);
     padding: 10px 16px;
     cursor: pointer;
@@ -143,7 +143,7 @@ ul {
 
 .contact-info h2 {
     margin-bottom: 30px;
-    color: var(--c-brand)
+    color: cadetblue;
 }
 
 .contact-info p {
@@ -158,7 +158,7 @@ ul {
 
 .contact-form h2 {
     margin-bottom: 30px;
-    color: var(--c-brand)
+    color: cadetblue;
 }
 
 .form-group {
@@ -201,7 +201,7 @@ ul {
 button {
     padding: 10px 20px;
     border: none;
-    background: var(--c-brand);
+    background: cadetblue;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
