--- a/style.css
+++ b/style.css
@@ -105,9 +105,9 @@ ul {
 
 
 
-.container .h2 {
+.container .logo {
     padding-top: 30px;
-    max-width: 300px; /* Ensures the image does not exceed its container width */
+    max-width: 200px; /* Ensures the image does not exceed its container width */
     height: auto; /* Maintains the aspect ratio */
     width: auto;
 }
